# bitfilled

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  index.html
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  gh-pages.yml
bitfilled/: CMakeLists.txt  bitfield_traits.hpp  bitfilled.hpp
bitfilled/bitfilled/: access.hpp  base_ops.hpp  bitband.hpp  bitband_ops.hpp  bits.hpp  integer.hpp  macros.hpp  mmreg.hpp  size.hpp  sized_unsigned.hpp
test/: CMakeLists.txt  endianness.cpp  float.cpp  integer.test.cpp  memmapregs.cpp  mmreg.test.cpp  size.test.cpp  variable_bits.cpp  variable_bits.test.cpp
tools/: requirements.txt  svd2mmregmap.py
zephyr/: CMakeLists.txt  module.yml
